Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -31,16 +31,34 @@ professional astronomers, Research groups, students and some News. We</p>
 <ul>
 <li><p>A full list of professional astronomers (Proffesors and Postdocs) working in Colombia 
 can be found here: <a href="http://bit.ly/1bmeqDT">http://bit.ly/1bmeqDT</a></p></li>
-<li><p>A full list of colombian astronomers working as Postdocs all over the world can be found at: </p></li>
+<li><p>A full list of colombian astronomers working as Postdocs all over the world can be found at: 
+<a href="http://bitly.com/1AqrzCJ">http://bitly.com/1AqrzCJ</a></p></li>
 </ul>
 
-<p><a href="http://bitly.com/1AqrzCJ">http://bitly.com/1AqrzCJ</a></p>
+<h2>
+<a id="research-groups" class="anchor" href="#research-groups" aria-hidden="true"><span class="octicon octicon-link"></span></a>Research Groups:</h2>
+
+<p>A full lists of the astronomy research groups can be found here:</p>
+
+<p><a href="https://github.com/ColombianAstronomy/ResearchGroups">https://github.com/ColombianAstronomy/ResearchGroups</a></p>
 
 <h2>
 <a id="students" class="anchor" href="#students" aria-hidden="true"><span class="octicon octicon-link"></span></a>Students</h2>
 
+<p>Colombian astronomy students have their on network RECA (Red de Estudiantes Colombianos en Astronomía), 
+Where they share astronomy news, summer research opportunities, Msc and Phd Positions and events. </p>
+
+<ul>
+<li>Face book page: <a href="https://www.facebook.com/RECAstronomia">https://www.facebook.com/RECAstronomia</a>
+</li>
+<li>Official site: <a href="https://sites.google.com/site/recastronomia/">https://sites.google.com/site/recastronomia/</a> </li>
+</ul>
+
 <h2>
 <a id="news" class="anchor" href="#news" aria-hidden="true"><span class="octicon octicon-link"></span></a>News</h2>
+
+<p>Since 2015 every month a publication with astronomy news is released, you can look at them here:
+<a href="https://github.com/recanews">https://github.com/recanews</a>. </p>
 
       <footer class="site-footer">
         <span class="site-footer-owner"><a href="https://github.com/ColombianAstronomy/ColombianAstronomy">Colombianastronomy</a> is maintained by <a href="https://github.com/ColombianAstronomy">ColombianAstronomy</a>.</span>
