Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <body>
     <section class="page-header">
       <h1 class="project-name">Astronomy in Colombia</h1>
-      <h2 class="project-tagline">web page</h2>
+      <h2 class="project-tagline"></h2>
       <a href="https://github.com/ColombianAstronomy/ColombianAstronomy" class="btn">View on GitHub</a>
       <a href="https://github.com/ColombianAstronomy/ColombianAstronomy/zipball/master" class="btn">Download .zip</a>
       <a href="https://github.com/ColombianAstronomy/ColombianAstronomy/tarball/master" class="btn">Download .tar.gz</a>
