Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -23,15 +23,15 @@
 <a id="welcome-to-the-colombian-astronomy-web-page" class="anchor" href="#welcome-to-the-colombian-astronomy-web-page" aria-hidden="true"><span class="octicon octicon-link"></span></a>Welcome to the Colombian Astronomy web page:</h2>
 
 <p>In this site you will find all kind of information involving astronomy in Colombia, such as: Colombian 
-professional astronomers, Research groups, students and some News. We</p>
+professional astronomers, Research groups, students and some News. </p>
 
 <h2>
 <a id="professional-astronomers" class="anchor" href="#professional-astronomers" aria-hidden="true"><span class="octicon octicon-link"></span></a>Professional astronomers:</h2>
 
 <ul>
-<li><p>A full list of professional astronomers (Proffesors and Postdocs) working in Colombia 
+<li><p>A full list of professional astronomers (Professors and Postdocs) working in Colombia 
 can be found here: <a href="http://bit.ly/1bmeqDT">http://bit.ly/1bmeqDT</a></p></li>
-<li><p>A full list of colombian astronomers working as Postdocs all over the world can be found at: 
+<li><p>A full list of Colombian astronomers working as Postdocs all over the world can be found at: 
 <a href="http://bitly.com/1AqrzCJ">http://bitly.com/1AqrzCJ</a></p></li>
 </ul>
 
