Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -30,9 +30,9 @@ professional astronomers, Research groups, students and some News. </p>
 
 <ul>
 <li><p>A full list of professional astronomers (Professors and Postdocs) working in Colombia 
-can be found here: <a href="http://bit.ly/1bmeqDT">http://bit.ly/1bmeqDT</a></p></li>
+can be found here: <a href="https://github.com/ColombianAstronomy/ProductividadAstronomica/blob/master/ADS_stats_colombia.csv">https://github.com/ColombianAstronomy/ProductividadAstronomica/blob/master/ADS_stats_colombia.csv</a></p></li>
 <li><p>A full list of Colombian astronomers working as Postdocs all over the world can be found at: 
-<a href="http://bitly.com/1AqrzCJ">http://bitly.com/1AqrzCJ</a></p></li>
+<a href="https://github.com/ColombianAstronomy/ProductividadAstronomica/blob/master/ADS_stats_postdocs.csv">https://github.com/ColombianAstronomy/ProductividadAstronomica/blob/master/ADS_stats_postdocs.csv</a></p></li>
 </ul>
 
 <h2>
@@ -43,7 +43,7 @@ can be found here: <a href="http://bit.ly/1bmeqDT">http://bit.ly/1bmeqDT</a></p>
 <p><a href="https://github.com/ColombianAstronomy/ResearchGroups">https://github.com/ColombianAstronomy/ResearchGroups</a></p>
 
 <h2>
-<a id="students" class="anchor" href="#students" aria-hidden="true"><span class="octicon octicon-link"></span></a>Students</h2>
+<a id="students" class="anchor" href="#students" aria-hidden="true"><span class="octicon octicon-link"></span></a>Students:</h2>
 
 <p>Colombian astronomy students have their on network RECA (Red de Estudiantes Colombianos en Astronomía), 
 Where they share astronomy news, summer research opportunities, Msc and Phd Positions and events. </p>
@@ -55,7 +55,14 @@ Where they share astronomy news, summer research opportunities, Msc and Phd Posi
 </ul>
 
 <h2>
-<a id="news" class="anchor" href="#news" aria-hidden="true"><span class="octicon octicon-link"></span></a>News</h2>
+<a id="colombian-astronomical-events" class="anchor" href="#colombian-astronomical-events" aria-hidden="true"><span class="octicon octicon-link"></span></a>Colombian Astronomical Events:</h2>
+
+<ul>
+<li><a href="http://eventoscolombianosenciencias.com/ECC/Astronomia2015.html">http://eventoscolombianosenciencias.com/ECC/Astronomia2015.html</a></li>
+</ul>
+
+<h2>
+<a id="news" class="anchor" href="#news" aria-hidden="true"><span class="octicon octicon-link"></span></a>News:</h2>
 
 <p>Since 2015 every month a publication with astronomy news is released, you can look at them here:
 <a href="https://github.com/recanews">https://github.com/recanews</a>. </p>
